# architectClone

./: .gitignore  pyproject.toml
src/: arcloader.py  main.py  test.py  utils.py
