[project]
name = "architectclone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "diskcache>=5.6.3",
    "huggingface-hub>=0.35.3",
    "numpy>=2.3.3",
    "peft>=0.17.1",
    "requests>=2.32.5",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "trl>=0.23.0",
    "unsloth>=2025.10.1",
]
